# misis2024s-23-03-kartaeva-a-d

./: CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0004a.cpp  0155a.cpp  0263a.cpp  0271a.cpp  0485a.cpp  0579a.cpp  0617a.cpp  0791a.cpp  0935b  0978a.cpp  0978b.cpp  1330a.cpp  1585a.cpp  1701a.cpp  1702a  1717b.cpp  1721b.cpp  1734b.cpp  1872a.cpp  282a.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/rational/: rational.cpp  rational.hpp  test_rational.cpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.h
prj.lab/stacklst/: CMakeLists.txt  StackLst.cpp  StackLst.hpp
prj.test/: CMakeLists.txt  doctest.h  test_complex.cpp  test_rational.cpp
