set(CMAKE_CXX_STANDARD 20)

add_executable(0004a 0004a.cpp)
add_executable(0155a 0155a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1702a 1702a.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1872a 1872a.cpp)
